examples/errors/9_parse_int/layout.tml
#use <definitions.tmd>

<Window>
    <Text value="Hello, World!" font_size=65535/>
</Window>